# voprotector

./: README.md
src/: Makefile.am  addressofvoencoder.C  addressofvoencoder.h  addvoencoder.C  addvoencoder.h  assignvoencoder.C  assignvoencoder.h  conditionvoencoder.C  conditionvoencoder.h  dividevoencoder.C  dividevoencoder.h  ifthenelsevoencoder.C  ifthenelsevoencoder.h  intvoencoder.C  intvoencoder.h  jumpvoencoder.C  jumpvoencoder.h  minusvoencoder.C  minusvoencoder.h  multiplyvoencoder.C  multiplyvoencoder.h  notvoencoder.C  notvoencoder.h  pntrderefvoencoder.C  pntrderefvoencoder.h  printfvoencoder.C  printfvoencoder.h  remaindervoencoder.C  remaindervoencoder.h  returnvoencoder.C  returnvoencoder.h  rootvoencoder.C  rootvoencoder.h  sequencevoencoder.C  sequencevoencoder.h  strcmpvoencoder.C  strcmpvoencoder.h  stringvoencoder.C  stringvoencoder.h  subtractvoencoder.C  (+12 more)
test/: Makefile  input0.voprotected.c  input1.voprotected.c  input2.voprotected.c  input3.voprotected.c  test0.c  test0.voprotected.c  test1.c  test1.voprotected.c  test2.c  test2.voprotected.c  test3.c  test3.voprotected.c  test4.c  test4.voprotected.c  test5.c  test5.voprotected.c  test6.voprotected.c  test7.c  test7.voprotected.c  test8.c  test8.voprotected.c  test9.c  test9.voprotected.c  vo-interpreter.c
